codigo/variables/error_variable_1.out
  File "<stdin>", line 1
    123 = 44
    ^
SyntaxError: cannot assign to literal